<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WheresMyStuff</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="City">City</string>
    <string name="Zip">Zip Code</string>
    <string name="Street">Street</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="FindMe">Find Me</string>
    <string name="Phone">Phone_Number</string>
    <string name="Phone_Number">Phone Number</string>
    <string name="user_name">User Name</string>
    <string name="save_me">Save</string>
    <string name="password">Password</string>
    <string name="Retype_Password">Retype Password</string>
    <string name="Country">Country</string>
    <string name="user_taken">Error: User Name Already Taken</string>
    <string name="Item_Name">Item Name:</string>
    <string name="Item_Description">Item Description:</string>
    <string name="Lost">Lost</string>
    <string name="Found">Found</string>
    <string name="Donations">Donations</string>
    <string name="Required">Required</string>
    <string name="Item_Category">Item Category:</string>
    <string name="Item_Status">Item Status:</string>
    <string name="Item_Zip">Item Zip:</string>
    <string name="Item_Street">Item Street:</string>
    <string name="Open">Open:</string>
    <string name="Closed">Closed:</string>
    <string name="Keepsakes">Keepsakes</string>
    <string name="Heirlooms">Heirlooms</string>
    <string name="Misc">Misc</string>
    <string name="save_item">Save Item</string>
    <string name="Item_type">Item Type:</string>
    <string name="Item">Item</string>

    <string-array name="Category">
        <item>Lost</item>
        <item>Found</item>
        <item>Donations</item>
        <item>Needed</item>
    </string-array>

    <string name="Select_Category">Select Category:</string>
    <string name="Main_Street">1234 Main Street</string>
    <string name="More_Info">More info</string>
    <string-array name="SearchByList"><item>Date</item><item>Category</item>
        
        <item>Status</item>
        
    </string-array><string name="remove_user">Remove User</string>
    <string name="title_activity_add_remove_admin">AddRemoveAdmin</string>
    <string name="set_admin_status">Change Existing User to Admin</string>
    
        <string name="Search_by">"Search By: "</string>
        <string name="refine_search">Refine Search</string>
        <string-array name="RefineSearch">
            <item >Heirloom</item>
            <item >Misc</item>
            <item >Keepsake</item>
        </string-array>
        <string-array name="Status">
            <item >Open</item>
            <item >Off</item>
        </string-array>

</resources>